# Embedded-Linux-Projects

./: .gitignore  README.md
Agriculture_IOT_Project/: README.md
Blink_Led/: Blink_Led_Gpiod.cpp  CMakeLists.txt  README.md
Blink_Led/python/: blink_led_gpiod.py
Blink_Led/sysfs/: blink_led_sysfs.cpp
PWM/: CMakeLists.txt  README.md  pwm-led.service
PWM/cpp/: pwm_led_gpiod.cpp
PWM/sysfs/: pwm_led_sysfs.cpp
UART_APP/: CMakeLists.txt  README.md
UART_APP/cpp/: uart_comm.cpp  uart_led_control.cpp  uart_threaded.cpp
